--- a/views/business/plan-add.html
+++ b/views/business/plan-add.html
@@ -19,7 +19,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">生产代号</label>
                     <div class="layui-input-block">
-                        <input type="text" name="orderId" lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="hidden" name="orderId" lay-verify="required" autocomplete="off" class="layui-input">
                         <input type="text" name="planName" lay-verify="required" autocomplete="off" placeholder="请输入代号" class="layui-input">
                     </div>
                 </div>
@@ -41,6 +41,14 @@
                         <label class="layui-form-label">生产数量</label>
                         <div class="layui-input-inline">
                             <input type="text" name="num" lay-verify="required|number" autocomplete="off" placeholder="请输入生产数量" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-inline">
+                        <label class="layui-form-label">部门</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="deptName" lay-verify="required" placeholder="请输入生产部门" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                 </div>
@@ -128,7 +136,7 @@
             $.ajax({
                 type: 'POST',
                 contentType: "application/json;",
-                url: domain + "api/goods/insertGoods",
+                url: domain + "api/plan/insertPlan",
                 data: JSON.stringify(data.field),
                 success: function (result) {
                     if (result.code == 0) {
