--- a/views/business/sample-detail.html
+++ b/views/business/sample-detail.html
@@ -47,6 +47,20 @@
                     <input type="text" name="deliverDate" lay-verify="" autocomplete="off" class="layui-input">
                 </div>
             </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <label class="layui-form-label">订单数量</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="orderNum" id="orderNum" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-inline">
+                    <label class="layui-form-label">单位</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="productUnit" id="productUnit" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">样品照片</label>
