--- a/views/business/produce-list.html
+++ b/views/business/produce-list.html
@@ -39,8 +39,8 @@
 
                     <script type="text/html" id="user-table-barDemo">
                         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-                        <a class="layui-btn layui-btn-xs" lay-event="plan">创建生产计划</a>
-                        <a class="layui-btn layui-btn-xs" lay-event="go_produce">进入生产</a>
+                        <a class="layui-btn layui-btn-xs" lay-event="plan_detail">查看生产计划</a>
+                        <a class="layui-btn layui-btn-xs" lay-event="go_warehouse">完成入库</a>
                         <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
                     </script>
 
@@ -67,10 +67,12 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/sample/findSamplePage?status=3'
+            , url: domain + 'api/sample/findSamplePage?status=4'
             , cols: [[
                 {field: 'sample_name', title: '样品名称', width: 180, sort: true}
                 , {field: 'sample_code', title: '样品型号', width: 100}
+                , {field: 'order_num', title: '订单数量', width: 100}
+                , {field: 'product_unit', title: '单位', width: 100}
                 , {field: 'cooperation_company', title: '合作公司', width: 150, sort: true}
                 , {field: 'deliver_date', title: '交付时间', width: 120}
                 , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo'}
@@ -95,10 +97,10 @@
                     success: function (layero, index) {
                         var body = layer.getChildFrame('body', index);
                         var iframeWin = window[layero.find('iframe')[0]['name']]; //得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
-                        body.find('input[name="productName"]').val(data.productName);
-                        body.find('input[name="orderNum"]').val(data.orderNum);
-                        body.find('input[name="productUnit"]').val(data.productUnit);
-                        body.find('input[name="unitPrice"]').val(data.unitPrice);
+                        //body.find('input[name="productName"]').val(data.productName);
+                        body.find('input[name="orderNum"]').val(data.order_num);
+                        body.find('input[name="productUnit"]').val(data.product_unit);
+                        /*body.find('input[name="unitPrice"]').val(data.unitPrice);
                         body.find('input[name="totalPrice"]').val(data.totalPrice);
                         body.find('input[name="deliverDate"]').val(data.deliverDate);
                         body.find('input[name="cooperationCompany"]').val(data.cooperationCompany);
@@ -106,30 +108,27 @@
                         body.find('input[name="contactPhone"]').val(data.contactPhone);
                         if (data.remarks){
                             body.find('textarea[name="remarks"]').text(data.remarks);
-                        }
-
+                        }*/
                     }
                 });
                 layer.full(index);
-            } else if (obj.event === 'plan') {
+            } else if (obj.event === 'plan_detail') {
                 var index = layer.open({
                     type: 2,
-                    title: "创建生产计划",
-                    content: 'plan-add.html?orderId=' + data.order_id,
+                    title: "查看生产计划",
+                    content: 'plan-list3.html?orderId=' + data.order_id,
                     area: ['300px', '300px'],
                     maxmin: true,
                     success: function (layero, index) {
-                        var body = layer.getChildFrame('body', index);
-                        body.find('input[name="orderId"]').val(data.order_id);
                     }
                 });
                 layer.full(index);
-            } else if (obj.event === 'go_produce') {
-                layer.confirm('原材料都准备齐全了吗？', function (index) {
+            } else if (obj.event === 'go_warehouse') {
+                layer.confirm('确定入库操作吗？', function (index) {
                     $.ajax({
-                        type: 'POST',
+                        type: 'PUT',
                         contentType: "application/json;",
-                        url: domain + "api/sample/updateToPlan/"+ data.id,
+                        url: domain + "api/order/updateToFinish/"+ data.order_id,
                         success: function (result) {
                             if (result.code == 0) {
                                 layer.msg(result.msg);
@@ -155,7 +154,7 @@
                         curr: 1 //重新从第 1 页开始
                     }
                     , where: {
-                        status: 3,
+                        status: 4,
                         sampleName: $('#sampleName').val(),
                         sampleCode: $('#sampleCode').val(),
                         company: $('#company').val()
